Views fixed and comments displaying properly

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -101,7 +101,7 @@ commentDisplay.meta.description=Post: {0} - Votes: {1}
 
 comment.create.reply=Reply
 comment.viewComment=View details
-comment.replies.show=Show replies ({0}) ...
+comment.replies.show=Show more replies ({0}) ...
 comment.create.writeCommentPlaceholder = Write a comment...
 comment.create.button = Submit
 comment.create.not_validated=If you would like to leave a comment, please confirm your mail address!
