--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -103,7 +103,7 @@ commentDisplay.meta.description=Post: {0} - Votos: {1}
 
 comment.create.reply=Responder
 comment.viewComment=Ver detalles
-comment.replies.show=Mostrar respuestas ({0}) ...
+comment.replies.show=Mostrar más respuestas ({0}) ...
 comment.create.writeCommentPlaceholder=Escribe un comentario...
 comment.create.button=Enviar
 comment.create.not_validated=Si deseas dejar un comentario por favor valida tu email.
