--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -224,14 +224,17 @@ user.updatePasswordError.title=Update Password
 
 mail.emailConfirmation=Email confirmation
 mail.resendConfirmationEmail=Resend confirmation email
+mail.newComment.subject=New comment on your post {0}
 mail.newComment.header={0} has recieved a new comment
 mail.newComment.subTitile={0} said
 mail.newComment.title=New comment
 mail.newComment.goToComment=Go check the comment
 mail.passwordReset.linkMessage=Reset Password
 mail.passwordReset.message=If you're trying to reset your password please follow the link below
+mail.passwordReset.subject=Moovify - Password Reset
 mail.passwordReset.header=Password Reset
 mail.passwordReset.title=Password Reset
+mail.confirmation.subject=Moovify - Confirmation Email
 mail.confirmation.header=Welcome to Moovify! We are glad you decided to join the family
 mail.confirmation.message=In order to enable our all features you'd need to confirm your email. Click the link below and it'll be all set.
 mail.confirmation.confirmLink=Confirm email
