--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -223,6 +223,7 @@ user.updatePassword.failure.loginPage=Iniciar sesi\u00F3n
 
 mail.emailConfirmation=Confirmar email.
 mail.resendConfirmationEmail=Reenviar confirmaci\u00F3n de email
+mail.newComment.subject=Nuevo comentario en tu post {0}
 mail.newComment.header={0} ha recibido un comentario
 mail.newComment.subTitile={0} dijo
 mail.newComment.title=Nuevo comentario
@@ -230,7 +231,9 @@ mail.newComment.goToComment=Ve a revisar el comentario
 mail.passwordReset.linkMessage=Restaurar contrase\u00F1a
 mail.passwordReset.message=Si estas intentando restaurar tu contrase\u00F1a, por favor has click en el link de abajo.
 mail.passwordReset.header=Restaurar contrase\u00F1a
+mail.passwordReset.subject=Moovify - Restauración de Contrase\u00F1a
 mail.passwordReset.title=Restaurar contrase\u00F1a
+mail.confirmation.subject=Moovify - Email de Confirmación
 mail.confirmation.header=Bienvenido a Moovify. Estamos muy felices que hayas decidido unirte a nuestra familia.
 mail.confirmation.message=Para habilitar todas nuestras funcionalidades debes verificar tu cuenta. Has click en el link de abajo para hacerlo.
 mail.confirmation.confirmLink=Confirmar email
