Favourite Post functionality implemented

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -155,6 +155,7 @@ user.profile.ResendEmail=Resend email
 user.profile.Profile=Moovify | {0}'s Profile
 user.profile.yourPosts=Your Posts
 user.profile.yourComments=Your comments
+user.profile.yourFavouritePosts=Your Favourite Posts
 user.profile.inMoovifySince=In Moovify since: {0}
 user.profile.Name=Name: {0}
 user.profile.Email=Email: {0}
