--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -155,6 +155,7 @@ user.profile.ResendEmail=Reenviar email
 user.profile.Profile=Moovify | Perfil de {0}
 user.profile.yourPosts=Tus Posts
 user.profile.yourComments=Tus comentarios
+user.profile.yourFavouritePosts=Tus Posts Favoritos
 user.profile.inMoovifySince=En Moovify desde: {0}
 user.profile.Name=Nombre: {0}
 user.profile.Email=Email: {0}
