Added user follow

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -217,8 +217,8 @@ user.updatePassword.failure.title=The link you're trying to use is not valid :(
 user.updatePassword.failure.body=You may start the process again in the
 user.updatePassword.failure.loginPage=login
 user.updatePasswordError.title=Update Password
-
-
+user.follow=Follow
+user.unfollow=Unfollow
 
 #############################################################MAIL#############################################################
 
