--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -216,6 +216,8 @@ user.updatePasswordError.title=Actualizar contrase\u00F1a
 user.updatePassword.failure.title=El link que estas intentando utilizar no es v\u00E1lido :(
 user.updatePassword.failure.body=Puedes comenzar el proceso de nuevo desde 
 user.updatePassword.failure.loginPage=Iniciar sesi\u00F3n
+user.follow=Seguir
+user.unfollow=Dejar de seguir
 
 
 
