Edit Post Implemented

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -58,6 +58,8 @@ post.view.writtenBy=Written by:
 post.view.comments.title=Comments ({0})
 post.view.votes=Votes: {0}
 post.view.title= Moovify | Post: {0}
+post.view.edit=Edit your post
+post.view.lastEdited=Last edited on
 post.delete.button=Delete post
 post.delete.modalTitle = Are you sure you want to delete this post?
 
@@ -78,6 +80,10 @@ post.create.modal.tags.constrains=You may add up to 5 tags
 post.create.modal.tagsPlaceholder=Write the tag here
 post.create.modal.sendButton=Send
 post.create.modal.movieError.client=You have to select at least one movie
+
+post.edit.title=Moovify | Edit Post
+post.edit.h1=Update Your Post
+post.edit.send=Send
 
 postDisplay.meta.description={0} - By: {1}
 postDisplay.meta.votes=- Votes: {0}
@@ -370,3 +376,4 @@ error.invalidMovieIdException=A Movie selected is invalid. Make sure the provide
 error.invalidPaginationArgumentException=Pagination Arguments provided (Page Size and/or Page Number) are invalid. Make sure the provided info is correct.
 error.invalidRoleException=The Role of the user given is not valid. Make sure the provided info is correct.
 error.DeletedDisabledModelException=You tried to delete an entity which was 
+error.missingPostEditPermissionException=Missing authorization to edit this post
