--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -59,6 +59,8 @@ post.view.tags=Palabras clave
 post.view.writtenBy=Escrito por:
 post.view.comments.title=Comentarios ({0})
 post.view.votes=Votos: {0}
+post.view.edit=Edita tu post
+post.view.lastEdited=Editado por ultima vez el
 post.view.title= Moovify | Post: {0}
 post.delete.button=Borrar Post
 post.delete.modalTitle=\u00BFEst\u00E1 seguro que quiere borrar este Post?
@@ -80,6 +82,10 @@ post.create.modal.tags.constrains=Puedes a\u00F1adir hasta 5 etiquetas
 post.create.modal.tagsPlaceholder=Escribe aqu\u00ED las etiquetas
 post.create.modal.sendButton=Enviar
 post.create.modal.movieError.client=Debes seleccionar al menos una pel\u00EDcula
+
+post.edit.title=Moovify | Actualizar Post
+post.edit.h1=Actualiza tu post
+post.edit.send=Enviar
 
 postDisplay.meta.description={0} - Por: {1}
 postDisplay.meta.votes= - Votos: {0}
@@ -372,6 +378,7 @@ error.RestoredEnabledModelException=Intentaste restaurar una entidad que ya esta
 error.IllegalCommentLikeException=El comentario en el que intentas votar no es v\u00E1lido.
 error.IllegalPostLikeException=El post en el que intentas votar no es v\u00E1lido.
 error.InvalidUserPromotionException=Trataste de promover un usuario inv\u00E1lido
+error.missingPostEditPermissionException=No tienes autorizacion para editar este post
 
 
 
