Fixed hard coded values in messages, still passwordEquals is not working

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,17 +1,23 @@
-Size=The {0} must be between {1} and {2} characters
+Size={0} must be between {1} and {2} characters
 SpacesNormalization=Invalid use of spaces
 Min=You must pick {1} {0}
-MaxTagsSizeConstraint=The maximum amount of {0} permitted are 5
-MoviesSizeConstraint=You must select at least one movie from the list of {0} and no more than 20
 Email=The input is not a valid email
 NotEmpty=The {0} cannot be empty
-ValidPassword=Password must be between 12 and 30 characters
+ValidPassword=Your password is not valid
 UniqueUsername=Username already in use
 PasswordsEqualConstraint=Passwords must match
 PasswordsUpdateEqualConstraint=Passwords must match
 Pattern=Invalid {0}
 ValidatedEmail=There isn't a user with that email validated
-Avatar=The avatar uploaded must be an image smaller than 1 MB
+Avatar=The avatar uploaded is too heavy. Try selecting one smaller
+
+Size.postCreateForm.movies=You must pick between {1} and {2} {0} 
+Size.postCreateForm.tags=You must pick between {1} and {2} {0} 
+Size.password=Your password must be between {2} and {1} characters
+Size.name=Your name must be between {2} and {1} characters
+Size.username=Your username must be between {2} and {1} characters
+Size.title=The title must be between {2} and {1} characters
+Size.body=The body must be between {2} and {1} characters
 
 validation.user.UniqueUsername=Username already in use
 validation.user.UniqueEmail=Email already in use
