--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -1,18 +1,26 @@
-Size=El {0} debe tener entre {2} y {1} caracteres
+Size={0} debe tener entre {1} y {2} carácteres
 SpacesNormalization=Uso de espacios inv\u00E1lido
 Min=Debes seleccionar {1} {0}
 MaxTagsSizeConstraint=El m\u00E1ximo n\u00FAmero permitido de {0} es 5
 MoviesSizeConstraint=Debes seleccionar al menos una pel\u00EDcula de la lista de {0} y no m\u00E1s de 20
 Email=No es un email v\u00E1lido
 NotEmpty={0} no puede estar vac\u00EDo
-ValidPassword=La contrase\u00F1a debe tener entre 12 y 30 caracteres
+ValidPassword=La contrase\u00F1a es inválida
 PasswordsEqualConstraint=Las contrase\u00F1as deben ser iguales
 PasswordsUpdateEqualConstraint=Las contrase\u00F1as deben ser iguales
 
 UniqueUsername=El nombre de usuario ya est\u00E1 en uso
 Pattern={0} inv\u00E1lido
 ValidatedEmail=No hay un usuario con ese email validado
-Avatar=La imagen subida debe pesar menos de 1 MB
+Avatar=La imagen subida es demasiado pesada. Intenta seleccionar una más pequeña
+
+Size.postCreateForm.movies=Debes elegir entre {1} y {2} películas 
+Size.postCreateForm.tags=Debes elegir entre {1} y {2} tags
+Size.password=Tu contraseña debe tener entre {2} y {1} carácteres
+Size.name=Tu nombre debe tener entre {2} y {1} carácteres
+Size.username=Tu nombre de usuario debe tener entre {2} y {1} carácteres
+Size.title=El título debe tener entre {2} y {1} carácteres
+Size.body=El cuerpo debe tener entre {2} y {1} carácteres
 
 validation.user.UniqueUsername=El nombre de usuario ya est\u00E1 en uso
 validation.user.UniqueEmail=El email est\u00E1 en uso
