--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -6,8 +6,7 @@ MoviesSizeConstraint=Debes seleccionar al menos una pel\u00EDcula de la lista de
 Email=No es un email v\u00E1lido
 NotEmpty={0} no puede estar vac\u00EDo
 ValidPassword=La contrase\u00F1a es inválida
-PasswordsEqualConstraint=Las contrase\u00F1as deben ser iguales
-PasswordsUpdateEqualConstraint=Las contrase\u00F1as deben ser iguales
+MatchingPasswords=Las contrase\u00F1as deben ser iguales
 
 UniqueUsername=El nombre de usuario ya est\u00E1 en uso
 Pattern={0} inv\u00E1lido
