A tiny bit of love for edit post

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -90,7 +90,8 @@ post.create.modal.movieError.client=You have to select at least one movie
 
 post.edit.title=Moovify | Edit Post
 post.edit.h1=Update Your Post
-post.edit.send=Send
+post.edit=Edit
+post.edit.body=Edit the body of your post here. Other users will know that it was edited.
 
 postDisplay.meta.description={0} - By: {1}
 postDisplay.meta.votes=- Votes: {0}
