--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -94,7 +94,8 @@ post.create.modal.movieError.client=Debes seleccionar al menos una pel\u00EDcula
 
 post.edit.title=Moovify | Actualizar Post
 post.edit.h1=Actualiza tu post
-post.edit.send=Enviar
+post.edit=Editar
+post.edit.body=Edita el cuerpo de tu post aquí. Otros usuarios sabrán que ha sido editado.
 
 postDisplay.meta.description={0} - Por: {1}
 postDisplay.meta.votes= - Votos: {0}
