Changed how comments are shown when deleted

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -114,6 +114,7 @@ comment.delete.button=Borrar comentario
 comment.delete.confirmTitle=\u00BFEst\u00E1 seguro que quiere borrar el comentario?
 comment.delete.cancelButton=No
 comment.delete.confirmButton=Si
+comment.deleted=Este comentario ha sido borrado
 
 commentDisplay.meta.description=Post: {0} - Votos: {1}
 
