--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -110,6 +110,7 @@ comment.delete.button=Delete comment
 comment.delete.confirmTitle=Are you sure you want to delete this comment?
 comment.delete.cancelButton=No
 comment.delete.confirmButton=Yes
+comment.deleted=This comment was deleted
 
 commentDisplay.meta.description=Post: {0} - Votes: {1}
 
