Refactor home page

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -33,10 +33,14 @@ navbar.createPost=Create Post
 
 index.pagename=Moovify
 index.welcome=Welcome to Moovify!
-index.newestPost=Newest Posts
-index.hottestPost=Hottest Posts
+index.slogan=The movie is over?
+index.newestPosts=Newest Posts
+index.hottestPosts=Hottest Posts
+index.hottestUsers=Hottest Users
 index.myFeed=My feed
 index.myFeedEmpty=Your feed is empty. You can follow a user if you like their content and it will appear here.
+index.feed.title={0}'s feed.
+index.emptyPosts=It seems that there are no posts yet.
 
 watchlist=Watchlist
 news=News
@@ -95,6 +99,9 @@ post.edit.body=Edit the body of your post here. Other users will know that it wa
 
 postDisplay.meta.description={0} - By: {1}
 postDisplay.meta.votes=- Votes: {0}
+postDisplay.meta.list=- {0}
+postDisplay.meta.moviesDiscussed=Movies discussed:
+postDisplay.meta.tagsDiscussed=Tags:
 postDisplay.meta.age.days={0} days ago
 postDisplay.meta.age.hours={0} hours ago
 postDisplay.meta.age.minutes={0} mins ago
