--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -36,11 +36,14 @@ navbar.createPost=Crear Post
 
 index.pagename=Moovify
 index.welcome=\u00A1Bienvenido a Moovify!
-index.newestPost=Posts m\u00E1s recientes
-index.hottestPost=Posts m\u00E1s votados
+index.slogan=¿Terminaste la peli?
+index.newestPosts=Posts m\u00E1s recientes
+index.hottestPosts=Posts destacados
+index.hottestUsers=Usuarios destacados
 index.myFeed=Mi muro
 index.myFeedEmpty=Tu muro esta vacío. Puedes seguir a un usuario si te gusta su contenido y aparecerá aquí.
-
+index.feed.title=Muro de {0}
+index.emptyPosts=Parece que no hay posts todavía
 
 watchlist=Lista
 news=Noticias
@@ -99,6 +102,9 @@ post.edit.body=Edita el cuerpo de tu post aquí. Otros usuarios sabrán que ha s
 
 postDisplay.meta.description={0} - Por: {1}
 postDisplay.meta.votes= - Votos: {0}
+postDisplay.meta.list=- {0}
+postDisplay.meta.moviesDiscussed=Películas discutidas:
+postDisplay.meta.tagsDiscussed=Tags:
 postDisplay.meta.age.days=Hace {0} d\u00EDas
 postDisplay.meta.age.hours=Hace {0} horas
 postDisplay.meta.age.minutes=Hace {0} mins
