Better Edit User flow

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -206,9 +206,10 @@ user.profile.edit.repeatPassword=Repetir contrase\u00F1a:
 user.profile.edit.newRepeatPassword=Repetir contrase\u00F1a (Deben coincidir)
 user.profile.edit.newDescription=Nueva descripci\u00F3n:
 user.profile.changePasswordDesc=Puedes cambiar tu contrase\u00F1a aqu\u00ED. Cuidado, tu antigua contrase\u00F1a dejar\u00E1 de funcionar
-user.profile.edit.name=Editar nombre
-user.profile.edit.username=Editar nombre de usuario
-user.profile.edit.description=Editar descripci\u00F3n
+user.profile.edit.name=Ingresa un nuevo nombre
+user.profile.edit.username=Ingresa un nuevo nombre de usuario
+user.profile.edit.description=Ingresa una nueva descripción
+user.profile.edit.submit.button=Actualizar
 user.view.Profile=Moovify | Bienvenido al perfil de {0}
 user.view.Posts=Posts escritos por {0}
 user.view.Comments=Comentarios de {0}
@@ -396,7 +397,8 @@ error.RestoredEnabledModelException=Intentaste restaurar una entidad que ya esta
 error.IllegalCommentLikeException=El comentario en el que intentas votar no es v\u00E1lido.
 error.IllegalPostLikeException=El post en el que intentas votar no es v\u00E1lido.
 error.InvalidUserPromotionException=Trataste de promover un usuario inv\u00E1lido
-error.missingPostEditPermissionException=No tienes autorizacion para editar este post
+error.missingPostEditPermissionException=No tienes autorización para editar este post
+error.missingCommentEditPermissionException=No tienes autorización para editar este post
 
 
 
