--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -205,9 +205,10 @@ user.profile.edit.repeatPassword=Repeat password:
 user.profile.edit.newRepeatPassword=Repeat password (must match)
 user.profile.edit.newDescription=New description:
 user.profile.changePasswordDesc=You can change your password in here. Be careful, your old password will not work any longer
-user.profile.edit.name=Edit name
-user.profile.edit.username=Edit username
-user.profile.edit.description=Edit description
+user.profile.edit.name=Enter new name
+user.profile.edit.username=Enter new username
+user.profile.edit.description=Enter new description
+user.profile.edit.submit.button=Update
 user.view.Profile=Moovify | Welcome to {0}'s Profile
 user.view.Posts=Posts written by {0}
 user.view.Comments=Comments made by {0}
@@ -391,3 +392,4 @@ error.invalidPaginationArgumentException=Pagination Arguments provided (Page Siz
 error.invalidRoleException=The Role of the user given is not valid. Make sure the provided info is correct.
 error.DeletedDisabledModelException=You tried to delete an entity which was 
 error.missingPostEditPermissionException=Missing authorization to edit this post
+error.missingCommentEditPermissionException=Missing authorization to edit this comment
