Better Exception Handling in Controllers. Delegated to Service Layer

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -407,6 +407,10 @@ error.IllegalPostLikeException=El post en el que intentas votar no es v\u00E1lid
 error.InvalidUserPromotionException=Trataste de promover un usuario inv\u00E1lido
 error.missingPostEditPermissionException=No tienes autorización para editar este post
 error.missingCommentEditPermissionException=No tienes autorización para editar este post
+error.illegalUserFollowException=Intentaste seguir a un usuario invalido
+error.illegalUserUnfollowException=Intentaste dejar de seguir a un usuario invalido
+error.illegalCommentEditionException=Intentaste editar un comentario invalido
+error.illegalPostEditionException=Intentaste editar un post invalido
 
 
 
