Changed edit profile a bit plus now we are showing our username not our name everywhere

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -18,6 +18,9 @@ Size.username=Your username must be between {2} and {1} characters
 Size.title=The title must be between {2} and {1} characters
 Size.body=The body must be between {2} and {1} characters
 
+Pattern.username=Invalid {0} 
+Pattern.name=Invalid {0}
+
 validation.user.UniqueUsername=Username already in use
 validation.user.UniqueEmail=Email already in use
 validation.resetPassword.InvalidEmail=The email provided is not valid
@@ -215,8 +218,11 @@ user.profile.edit.newRepeatPassword=Repeat password (must match)
 user.profile.edit.newDescription=New description:
 user.profile.changePasswordDesc=You can change your password in here. Be careful, your old password will not work any longer
 user.profile.edit.name=Enter new name
+user.profile.edit.name.meta=Enter your full name here:
 user.profile.edit.username=Enter new username
+user.profile.edit.username.meta=Enter your new username here (this is how other users will recognize you in the page).
 user.profile.edit.description=Enter new description
+user.profile.edit.description.meta=Enter your new description here. (Psst, tell something about you and your content)
 user.profile.edit.submit.button=Update
 user.view.Profile=Moovify | Welcome to {0}'s Profile
 user.view.Posts=Posts written by {0}
@@ -376,7 +382,7 @@ search.user.roles.all=Any
 search.user.roles.admin=Admin
 search.user.roles.user=User
 search.user.sortCriteria.label=Sort By:
-search.user.sortCriteria.name=Name
+search.user.sortCriteria.username=Username
 search.user.sortCriteria.newest=Newest
 search.user.sortCriteria.likes=Likes
 
