--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -21,6 +21,9 @@ Size.username=Tu nombre de usuario debe tener entre {2} y {1} carácteres
 Size.title=El título debe tener entre {2} y {1} carácteres
 Size.body=El cuerpo debe tener entre {2} y {1} carácteres
 
+Pattern.username=Nombre de usuario inválido
+Pattern.name=Nombre inválido
+
 validation.user.UniqueUsername=El nombre de usuario ya est\u00E1 en uso
 validation.user.UniqueEmail=El email est\u00E1 en uso
 validation.resetPassword.InvalidEmail=El email no es v\u00E1lido
@@ -215,8 +218,11 @@ user.profile.edit.newRepeatPassword=Repetir contrase\u00F1a (Deben coincidir)
 user.profile.edit.newDescription=Nueva descripci\u00F3n:
 user.profile.changePasswordDesc=Puedes cambiar tu contrase\u00F1a aqu\u00ED. Cuidado, tu antigua contrase\u00F1a dejar\u00E1 de funcionar
 user.profile.edit.name=Ingresa un nuevo nombre
+user.profile.edit.name.meta=Ingresa tu nombre completo aquí:
 user.profile.edit.username=Ingresa un nuevo nombre de usuario
+user.profile.edit.username.meta=Ingresa tu nuevo nombre de usuario aquí (así serás reconocido públicamente dentro de la página).
 user.profile.edit.description=Ingresa una nueva descripción
+user.profile.edit.description.meta=Ingresa tu nueva descripción aquí (Psst, contanos de vos y de tu contenido).
 user.profile.edit.submit.button=Actualizar
 user.view.Profile=Moovify | Bienvenido al perfil de {0}
 user.view.Posts=Posts escritos por {0}
@@ -378,7 +384,7 @@ search.user.roles.admin=Administrador
 search.user.roles.user=Usuario
 
 search.user.sortCriteria.label=Ordenar por:
-search.user.sortCriteria.name=Nombre
+search.user.sortCriteria.username=Nombre de usuario
 search.user.sortCriteria.newest=M\u00E1s recientes
 search.user.sortCriteria.likes=M\u00E1s likes
 
