minor style fix

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -213,7 +213,7 @@ user.profile.edit.newUsername=Nuevo nombre de usuario
 user.profile.edit.changePassword=Cambiar tu contrase\u00F1a
 user.profile.edit.wantChangePassword=\u00BFDeseas cambiar tu contrase\u00F1a?
 user.profile.edit.newPassword=Nueva contrase\u00F1a
-user.profile.edit.repeatPassword=Repetir contrase\u00F1a: 
+user.profile.edit.repeatPassword=Repetir contrase\u00F1a 
 user.profile.edit.newRepeatPassword=Repetir contrase\u00F1a (Deben coincidir)
 user.profile.edit.newDescription=Nueva descripci\u00F3n:
 user.profile.changePasswordDesc=Puedes cambiar tu contrase\u00F1a aqu\u00ED. Cuidado, tu antigua contrase\u00F1a dejar\u00E1 de funcionar
