Added an icon that shows if you follow a user, plus changed default page-size and fixed somo hardcoded strings

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -10,8 +10,8 @@ Pattern=Invalid {0}
 ValidatedEmail=There isn't a user with that email validated
 Avatar=The avatar uploaded is too heavy. Try selecting one smaller
 
-Size.postCreateForm.movies=You must pick between {1} and {2} {0} 
-Size.postCreateForm.tags=You must pick between {1} and {2} {0} 
+Size.postCreateForm.movies=You must pick between {2} and {1} {0} 
+Size.postCreateForm.tags=You can pick up to {1} {0} 
 Size.password=Your password must be between {2} and {1} characters
 Size.name=Your name must be between {2} and {1} characters
 Size.username=Your username must be between {2} and {1} characters
@@ -140,6 +140,9 @@ comment.lastEditDate.message=Last edited on {0}
 #############################################################PAGINATION#############################################################
 
 paginationController.pageSize.message=Showing
+paginationController.pageSize.five=5
+paginationController.pageSize.ten=10
+paginationController.pageSize.twentyfive=25
 
 #############################################################USERS#############################################################
 
