--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -144,7 +144,9 @@ paginationController.pageSize.message=Mostrando
 
 #############################################################USERS#############################################################
 
-userDisplay.meta.description=Nombre: {0} - Votos totales: {1}
+userDisplay.meta.description=Nombre: {0} - Descripción: {1}
+userDisplay.meta.votes=Votos totales: {0}
+userDisplay.meta.empty.description:Este usuario no tiene una descripción todavía
 user.notEnabled.name=Removido
 user.emailConfirm.title=Se necesita confirmar el email
 user.emailConfirm.text=Para poder crear un posts, necesitas confirmar tu email. Revisa tu casilla de email, \u00A1te hemos enviado un link!
