bookmark added in frontend and post-metadata refactored

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -64,7 +64,7 @@ admin.deleted.users=Users
 
 #############################################################POSTS#############################################################
 
-post.view.written=Written on
+post.view.writtenSeparator= -
 post.view.minReading=Takes {0} min reading.
 post.view.movies=Movies
 post.view.tags=Key words
@@ -76,6 +76,9 @@ post.view.edit=Edit your post
 post.view.lastEdited=Last edited on
 post.delete.button=Delete post
 post.delete.modalTitle = Are you sure you want to delete this post?
+
+post.add.bookmark = Save this post for later
+post.remove.bookmark = Remove this post from your bookmarks
 
 post.create.title=Moovify | Create Post
 post.create.newPost=Create new post
@@ -182,7 +185,7 @@ user.profile.ResendEmail=Resend email
 user.profile.Profile=Moovify | {0}'s Profile
 user.profile.yourPosts=Your Posts
 user.profile.yourComments=Your comments
-user.profile.yourFavouritePosts=Your Favourite Posts
+user.profile.bookmarkedPosts=Your Bookmarked Posts
 user.profile.yourFollowedUsers=Your Followed Users
 user.profile.inMoovifySince=In Moovify since: {0}
 user.profile.Name=Name: {0}
