--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -67,7 +67,7 @@ admin.deleted.users=Usuarios
 
 #############################################################POSTS#############################################################
 
-post.view.written=Escrito el
+post.view.writtenSeparator= -
 post.view.minReading=Toma {0} min para leer
 post.view.movies=Pel\u00EDculas
 post.view.tags=Palabras clave
@@ -79,6 +79,9 @@ post.view.lastEdited=Editado por ultima vez el
 post.view.title= Moovify | Post: {0}
 post.delete.button=Borrar Post
 post.delete.modalTitle=\u00BFEst\u00E1 seguro que quiere borrar este Post?
+
+post.add.bookmark = Guardar este post para ver más tarde
+post.remove.bookmark = Quitar este post de tu lista de guardados
 
 post.create.title=Moovify | Crear Post
 post.create.newPost=Crear un nuevo Post
@@ -183,7 +186,7 @@ user.profile.ResendEmail=Reenviar email
 user.profile.Profile=Moovify | Perfil de {0}
 user.profile.yourPosts=Tus Posts
 user.profile.yourComments=Tus comentarios
-user.profile.yourFavouritePosts=Tus Posts Favoritos
+user.profile.bookmarkedPosts=Tus Posts Guardados
 user.profile.yourFollowedUsers=Tus Usuarios seguidos
 user.profile.inMoovifySince=En Moovify desde: {0}
 user.profile.Name=Nombre: {0}
