--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -138,7 +138,7 @@ comment.create.replyBtn = Send
 comment.create.noAccount.message=If you want to start commenting and creating post head out to the sign up to
 comment.create.noAccount.createAccount= create your account.
 comment.edit.button=Edit Comment
-comment.lastEditDate.message=Last edited on {0}
+comment.lastEditDate.message=Edited on {0}
 
 #############################################################PAGINATION#############################################################
 
