--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -139,7 +139,7 @@ comment.create.replyPlaceholder=Escribe una respuesta...
 comment.create.noAccount.message=Para poder empezar a comentar y crear post es necesario que
 comment.create.noAccount.createAccount= crees tu cuenta.
 comment.edit.button=Editar Comentario
-comment.lastEditDate.message=Editado por ultima vez el {0}
+comment.lastEditDate.message=Editado el {0}
 
 #############################################################PAGINATION#############################################################
 
