Refactored post view a bit more and added the bookmarked icon to postDisplay

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -149,9 +149,10 @@ paginationController.pageSize.twentyfive=25
 
 #############################################################USERS#############################################################
 
-userDisplay.meta.description=Name: {0} - Description {1}
+userDisplay.meta.description=Name: {0} - Description: {1}
+userDisplay.meta.name.votes=Name: {0} - Votes: {1}
 userDisplay.meta.votes=Total votes: {0}
-userDisplay.meta.empty.description:This user does not have a description yet.
+userDisplay.meta.empty.description=This user does not have a description yet.
 user.notEnabled.name=Removed
 user.emailConfirm.title=Email confirmation requiered
 user.emailConfirm.text=To be able to create a new post, you have to confirm your email address. Check your email box, we sent you a link!
