added title to icons and minor fixes

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -80,6 +80,7 @@ post.delete.modalTitle=\u00BFEst\u00E1 seguro que quiere borrar este Post?
 
 post.add.bookmark = Guardar este post para ver más tarde
 post.remove.bookmark = Quitar este post de tu lista de guardados
+post.bookmarked = Post guardado
 
 post.create.title=Moovify | Crear Post
 post.create.newPost=Crear un nuevo Post
@@ -260,7 +261,8 @@ user.updatePassword.failure.body=Puedes comenzar el proceso de nuevo desde
 user.updatePassword.failure.loginPage=Iniciar sesi\u00F3n
 user.follow=Seguir
 user.unfollow=Dejar de seguir
-
+user.followed=Usuario seguido
+edit.title=Editar
 
 
 #############################################################MAIL#############################################################
@@ -313,6 +315,7 @@ search.notFound=No hay {0} para estos requerimientos. Intenta cambiar los par\u0
 search.commentsNotFound=No hay comentarios para estos requerimientos. Intenta cambiar los par\u00E1metros de b\u00FAsqueda.
 search.usersNotFound=No hay usuarios para estos requerimientos. Intenta cambiar los par\u00E1metros de b\u00FAsqueda.
 search.searchResults=Resultados de la b\u00FAsqueda
+search.title = Buscar
 
 #############################################################SEARCH-Posts#############################################################
 
