--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -61,6 +61,7 @@ admin.deleted.searchResults=Search results
 admin.deleted.posts=Posts
 admin.deleted.comments=Comments
 admin.deleted.users=Users
+admin.title=Admin
 
 #############################################################POSTS#############################################################
 
@@ -79,6 +80,7 @@ post.delete.modalTitle = Are you sure you want to delete this post?
 
 post.add.bookmark = Save this post for later
 post.remove.bookmark = Remove this post from your bookmarks
+post.bookmarked = Saved post
 
 post.create.title=Moovify | Create Post
 post.create.newPost=Create new post
@@ -265,6 +267,8 @@ user.updatePassword.failure.loginPage=login
 user.updatePasswordError.title=Update Password
 user.follow=Follow
 user.unfollow=Unfollow
+user.followed=User followed
+edit.title=Edit
 
 #############################################################MAIL#############################################################
 
@@ -318,6 +322,7 @@ search.notFound=There are no {0} that match those requirements. Try changing the
 search.commentsNotFound=There are no comments that match those requirements. Try changing the search parameters.
 search.usersNotFound=There are no users that match those requirements. Try changing the search parameters.
 search.searchResults = Search results
+search.title = Search
 
 #############################################################SEARCH-Posts#############################################################
 
