Corrected the bugs i found, still plenty to do

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,4 +1,4 @@
-Size={0} must be between {1} and {2} characters
+Size=Your {0} must be between {2} and {1} characters
 SpacesNormalization=Invalid use of spaces
 Min=You must pick {1} {0}
 Email=The input is not a valid email
@@ -9,15 +9,9 @@ MatchingPasswords=Passwords must match
 Pattern=Invalid {0}
 ValidatedEmail=There isn't a user with that email validated
 Avatar=The avatar uploaded is too heavy. Try selecting one smaller
-
-Size.postCreateForm.movies=You must pick between {2} and {1} {0} 
-Size.postCreateForm.tags=You can pick up to {1} {0} 
-Size.password=Your password must be between {2} and {1} characters
-Size.name=Your name must be between {2} and {1} characters
-Size.username=Your username must be between {2} and {1} characters
-Size.title=The title must be between {2} and {1} characters
-Size.body=The body must be between {2} and {1} characters
-
+TagSize=The {0} you choose can't be longer than {1} characters
+Size.title=The {0} must be between {2} and {1} characters
+Size.body=The {0} must be between {2} and {1} characters
 Pattern.username=Invalid {0} 
 Pattern.name=Invalid {0}
 
@@ -93,7 +87,7 @@ post.create.modal.moviesDiscussed.constrains=You have to choose at least one (ma
 post.create.modal.moviesPlaceholder=Insert the name of the movie you want to add
 post.create.modal.addButton=Add
 post.create.modal.tags=Add some key words that describe this post
-post.create.modal.tags.constrains=You may add up to 5 tags
+post.create.modal.tags.constrains=You may add up to 5 tags (no more than 50 characters)
 post.create.modal.tagsPlaceholder=Write the tag here
 post.create.modal.sendButton=Send
 post.create.modal.movieError.client=You have to select at least one movie
@@ -118,6 +112,7 @@ comment.title=Moovify | Comment
 comment.view.votes=Votes: {0}
 comment.view.post.removed=Post removed
 comment.notEnabled.message=** This comment was removed :( **
+comment.notEnabled.comment.body= [ {0}: {1} ]
 comment.notEnabled.fullMessage=This comment was removed. Here you can see all the replies it had while it was active
 comment.delete.button=Delete comment
 comment.delete.confirmTitle=Are you sure you want to delete this comment?
@@ -150,7 +145,7 @@ paginationController.pageSize.twentyfive=25
 #############################################################USERS#############################################################
 
 userDisplay.meta.description=Name: {0} - Description: {1}
-userDisplay.meta.name.votes=Name: {0} - Votes: {1}
+userDisplay.meta.name.votes=Name: {0} - Total votes: {1}
 userDisplay.meta.votes=Total votes: {0}
 userDisplay.meta.empty.description=This user does not have a description yet.
 user.notEnabled.name=Removed
