More visual bugs corrected and fixes

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -51,7 +51,7 @@ adminPanel.title=Moovify | Admin Panel
 adminPanel.btn=Admin panel
 adminPanel.restore=Restore
 admin.deleted.title=Restore deleted {0}
-admin.deleted.searchResults=Search results
+admin.deleted.searchResults=Search results:
 admin.deleted.posts=Posts
 admin.deleted.comments=Comments
 admin.deleted.users=Users
@@ -316,7 +316,7 @@ search.posts.postsNotFound=There are no posts that match those requirements. Try
 search.notFound=There are no {0} that match those requirements. Try changing the search parameters.
 search.commentsNotFound=There are no comments that match those requirements. Try changing the search parameters.
 search.usersNotFound=There are no users that match those requirements. Try changing the search parameters.
-search.searchResults = Search results
+search.searchResults = Search results:
 search.title = Search
 
 #############################################################SEARCH-Posts#############################################################
