--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -58,7 +58,7 @@ adminPanel.title=Moovify | Panel de administrador
 adminPanel.btn=Panel de administrador
 adminPanel.restore=Recuperar
 admin.deleted.title=Recuperar {0} borrados
-admin.deleted.searchResults=Resultados de b\u00FAsqueda
+admin.deleted.searchResults=Resultados de b\u00FAsqueda:
 admin.deleted.posts=Posts
 admin.deleted.comments=Comentarios
 admin.deleted.users=Usuarios
