Admin Only Ability to update movie posts

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -8,7 +8,8 @@ UniqueUsername=Username already in use
 MatchingPasswords=Passwords must match
 Pattern=Invalid {0}
 ValidatedEmail=There isn't a user with that email validated
-Avatar=The avatar uploaded is too heavy. Try selecting one smaller
+Avatar=The avatar uploaded is too big or invalid. Try selecting one smaller
+MoviePoster=The poster uploaded is not an image
 
 Size.postCreateForm.movies=You must pick between {2} and {1} {0} 
 Size.postCreateForm.tags=You can pick up to {1} {0} 
