--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -9,7 +9,8 @@ MatchingPasswords=Las contrase\u00F1as deben ser iguales
 UniqueUsername=El nombre de usuario ya est\u00E1 en uso
 Pattern={0} inv\u00E1lido
 ValidatedEmail=No hay un usuario con ese email validado
-Avatar=La imagen subida es demasiado pesada. Intenta seleccionar una más pequeña
+Avatar=La imagen subida es demasiado pesada o invalida. Intenta seleccionar una más pequeña
+MoviePoster=El poster subido no es una imagen
 
 Size.postCreateForm.movies=Debes elegir entre {2} y {1} películas 
 Size.postCreateForm.tags=Puedes elegir hasta {1} {0}
