Update movie poster view

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -316,6 +316,10 @@ movie.view.meta.movieCategories.title=Movie categories
 movie.view.overview=Overview
 movie.view.posts.postsNotFound=There doesn't seem to exists posts about this movie, go create one!
 
+movie.updatePoster.pageTitle=Update movie poster
+movie.updatePoster.newPoster.title=Select new poster for {0}
+movie.updatePoster.previousPoster.altText=Previous poster for movie: {0}
+
 #############################################################SEARCH#############################################################
 
 search.posts.postsNotFound=There are no posts that match those requirements. Try changing the search parameters or looking for some new posts in the home screen.
