--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -310,6 +310,10 @@ movie.view.meta.movieCategories.title=Categor\u00EDa de pel\u00EDcula
 movie.view.overview=Visi\u00F3n general
 movie.view.posts.postsNotFound=No parecen existir post de esta pel\u00EDcula, \u00A1crea uno!
 
+movie.updatePoster.pageTitle=Cambiar poster de pel\u00EDcula
+movie.updatePoster.newPoster.title=Seleccionar nueva imagen para {0}
+movie.updatePoster.previousPoster.altText=Poster actual para la pel\u00EDcula: {0}
+
 #############################################################SEARCH#############################################################
 
 search.notFound=No hay {0} para estos requerimientos. Intenta cambiar los par\u00E1metros de b\u00FAsqueda.
