Rearranged movie view with poster inclusion

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -302,15 +302,17 @@ mail.resendConfirmation.body=Email sent to {0}
 
 movie.title=Moovify | Movie
 movie.view.title=Moovify | Movie: {0}
-movie.view.meta.releaseDate=Premier date: {0}
-movie.view.meta.popularity=Popularity: {0}
-movie.view.meta.originalLanguage=Original language: {0}
-movie.view.meta.originalTitle=Original title: {0}
-movie.view.meta.voteAverage=Vote Average: {0}
+movie.view.pageTitle={0} ({1})
+movie.view.meta.releaseDate=Premier date
+movie.view.meta.popularity=Popularity
+movie.view.meta.originalLanguage=Original language
+movie.view.meta.originalTitle=Original title
+movie.view.meta.voteAverage=Vote Average
 movie.view.meta.movieCategories.title=Movie categories
 movie.view.overview=Overview
+movie.view.postsSection.title=Posts about this movie
 movie.view.posts.postsNotFound=There doesn't seem to exists posts about this movie, go create one!
-
+movie.view.poster.altText=Movie poster
 movie.updatePoster.pageTitle=Update movie poster
 movie.updatePoster.newPoster.title=Select new poster for {0}
 movie.updatePoster.previousPoster.altText=Previous poster for movie: {0}
