--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -302,15 +302,17 @@ mail.resendConfirmation.body=Email enviado a {0}
 
 movie.title=Moovify | Película
 movie.view.title=Moovify | Película: {0}
-movie.view.meta.releaseDate=D\u00EDa de estreno: {0}
+movie.view.pageTitle={0} ({1})
+movie.view.meta.releaseDate=D\u00EDa de estreno
 movie.view.meta.popularity=Popularidad: {0}
-movie.view.meta.originalLanguage=Lengua original: {0}
-movie.view.meta.originalTitle=Titulo originial: {0}
-movie.view.meta.voteAverage=Voto promedio: {0}
+movie.view.meta.originalLanguage=Lengua original
+movie.view.meta.originalTitle=Titulo originial
+movie.view.meta.voteAverage=Voto promedio
 movie.view.meta.movieCategories.title=Categor\u00EDa de pel\u00EDcula
-movie.view.overview=Visi\u00F3n general
+movie.view.overview=Sinopsis
+movie.view.postsSection.title=Posts sobre esta pelicula
 movie.view.posts.postsNotFound=No parecen existir post de esta pel\u00EDcula, \u00A1crea uno!
-
+movie.view.poster.altText=Poster de la pelicula
 movie.updatePoster.pageTitle=Cambiar poster de pel\u00EDcula
 movie.updatePoster.newPoster.title=Seleccionar nueva imagen para {0}
 movie.updatePoster.previousPoster.altText=Poster actual para la pel\u00EDcula: {0}
