More visual fixes, i hope there aren't many more

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -301,6 +301,7 @@ mail.resendConfirmation.body=Email sent to {0}
 #############################################################MOVIE#############################################################
 
 movie.title=Moovify | Movie
+movie.create.submit=Submit
 movie.view.title=Moovify | Movie: {0}
 movie.view.pageTitle={0} ({1})
 movie.view.meta.releaseDate=Premier date
