--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -301,6 +301,7 @@ mail.resendConfirmation.body=Email enviado a {0}
 #############################################################MOVIE#############################################################
 
 movie.title=Moovify | Película
+movie.create.submit=Enviar
 movie.view.title=Moovify | Película: {0}
 movie.view.pageTitle={0} ({1})
 movie.view.meta.releaseDate=D\u00EDa de estreno
