followers in profile

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -232,6 +232,7 @@ user.profile.edit.description=Enter new description
 user.profile.edit.description.meta=Enter your new description here. (Psst, tell something about you and your content)
 user.profile.edit.submit.button=Update
 user.view.Profile=Moovify | Welcome to {0}'s Profile
+user.view.followers=- Followers: {0} - Total votes: {1}
 user.view.Posts=Posts written by {0}
 user.view.Comments=Comments made by {0}
 user.view.usersFollowed=Users followed by {0}
