--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -232,6 +232,7 @@ user.profile.edit.description=Ingresa una nueva descripción
 user.profile.edit.description.meta=Ingresa tu nueva descripción aquí (Psst, contanos de vos y de tu contenido).
 user.profile.edit.submit.button=Actualizar
 user.view.Profile=Moovify | Bienvenido al perfil de {0}
+user.view.followers=- Seguidores: {0} - Votos totales {1}
 user.view.Posts=Posts escritos por {0}
 user.view.Comments=Comentarios de {0}
 user.view.usersFollowed=Usuarios seguidos por {0}
